Updates from Overleaf

--- a/latex/pol_complex_refs.bib
+++ b/latex/pol_complex_refs.bib
@@ -531,6 +531,7 @@ publisher={University of Hawai'i Press},
   booktitle={Arts of Vanuatu},
   author={Bonnemaison, Jo{\"e}l},
   year={1996},
+ editor={Joël Bonnemaison AND Christian Kaufmann AND Kirk Huffman AND Darrell Tryon},
   title={The Art of Power},
   publisher={University of Hawaii Press}
 }
@@ -966,6 +967,44 @@ doi={https://doi.org/10.4000/jso.1404},
   pages={161--195},
   year={2002},
   publisher={Taylor \& Francis}
+}
+
+@article{derex2016partial,
+  title={Partial connectivity increases cultural accumulation within groups},
+  author={Derex, Maxime and Boyd, Robert},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={113},
+  number={11},
+  pages={2982--2987},
+  year={2016},
+  publisher={National Acad Sciences}
+}
+
+@article{ribeiro2020package,
+  title={Package ‘geoR’},
+  author={Ribeiro Jr, Paulo J and Diggle, Peter J and Christensen, Ole and Schlather, Martin and Bivand, Roger and Ripley, Brian and Ribeiro Jr, Maintainer Paulo Justiniano and Imports, MASS},
+  journal={R package version 1.8},
+  volume={1},
+  year={2020}
+}
+
+@article{farris1972estimating,
+  title={Estimating phylogenetic trees from distance matrices},
+  author={Farris, James S},
+  journal={The American Naturalist},
+  volume={106},
+  number={951},
+  pages={645--668},
+  year={1972},
+  publisher={University of Chicago Press}
+}
+
+@article{skirgaard2024disentangling,
+  title={Disentangling Ancestral State Reconstruction in historical linguistics: Comparing classic approaches and new methods using Oceanic grammar},
+  author={Skirg{\aa}rd, Hedvig},
+  journal={Diachronica},
+  year={2024},
+  publisher={John Benjamins Publishing Company Amsterdam/Philadelphia}
 }
 
 @incollection{lambert1975makin,
@@ -1893,6 +1932,7 @@ author={Tetens, A}
   booktitle = {Arts of {{Vanuatu}}},
   author = {Bonnemaison, Jo{\"e}l},
   year = {1996},
+editor={Joël Bonnemaison AND   Christian Kaufmann AND Kirk Huffman AND Darrell Tryon},
   pages = {200--216},
   publisher = {{University of Hawaii Press}}
 }
@@ -1907,7 +1947,7 @@ author={Tetens, A}
 @article{bromham_polynesian_sizes,
   ids = {bromhampolyvocab},
   title = {Rate of {{Language Evolution Is Affected}} by {{Population Size}}},
-  author = {Lindell Bromham, Xia Hua, Thomas G. Fitzpatrick and Greenhill, Simon J.},
+  author = {Lindell Bromham AND Xia Hua AND Thomas G. Fitzpatrick AND Simon J. Greenhill},
   year = {2015},
   volume = {112},
   publisher = {{National Academy of Sciences of the United States of America}},
@@ -2999,6 +3039,17 @@ note={{Asia-Pacific Data-Research Center of the International Pacific Research C
 }
 
 
+@article{roberts2015future,
+  title={Future tense and economic decisions: Controlling for cultural evolution},
+  author={Roberts, Se{\'a}n G and Winters, James and Chen, Keith},
+  journal={PloS one},
+  volume={10},
+  number={7},
+  pages={e0132145},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
 @article{gavin2013toward,
   title = {Toward a {{Mechanistic Understanding}} of {{Linguistic Diversity}}},
   author = {Gavin, Michael C and Botero, Carlos A and Bowern, Claire and Colwell, Robert K and Dunn, Michael and Dunn, Robert R and Gray, Russell D and Kirby, Kathryn R and McCarter, Joe and Powell, Adam and Rangel, Thiago F. and Stepp, John R. and Trautwein, Michelle and Verdolin, Jennifer L. and Yanega, Gregor},
@@ -3065,7 +3116,7 @@ note={{Asia-Pacific Data-Research Center of the International Pacific Research C
 author ={Hedvig Skirgård AND Hannah J. Haynie AND Damián E. Blasi AND Sam Passmore AND Angela Chira AND Luke Maurits AND Russell Dinnage AND Robert Forkel AND Simon J. Greenhill AND Johannes Englisch},
 year={2023},
 title={Grambank-analysed v1.0},
-note={R-scripts associated with the release of Gramabnk data v1.0},
+note={R-scripts associated with the release of Grambank data v1.0},
 DOI={https://doi.org/10.5281/zenodo.7740822}
 }
 
@@ -3188,7 +3239,7 @@ DOI={https://doi.org/10.5281/zenodo.7740822}
 }
 
 @article{grambank_release,
-  title = {Grambank Reveals Global Patterns in the Structural Diversity of the World's Languages},
+  title = {Grambank reveals the importance of genealogical constraints on linguistic diversity and highlights the impact of language loss},
     author = {Skirg{\aa}rd, Hedvig and Haynie, Hannah J. and Blasi, Dami{\'a}n E. and Hammarstr{\"o}m, Harald and Collins, Jeremy and Latarche, Jay J. and Lesage, Jakob and Weber, Tobias and Witzlack-Makarevich, Alena and Passmore, Sam and Chira, Angela and Maurits, Luke and Dinnage, Russell and Dunn, Michael and Reesink, Ger and Singer, Ruth and Bowern, Claire and Epps, Patience and Hill, Jane and Vesakoski, Outi and Robbeets, Martine and Abbas, Noor Karolin and Auer, Daniel and Bakker, Nancy A. and Barbos, Giulia and Borges, Robert D. and Danielsen, Swintha and Dorenbusch, Luise and Dorn, Ella and Elliott, John and Falcone, Giada and Fischer, Jana and Ghanggo Ate, Yustinus and Gibson, Hannah and G{\"o}bel, Hans-Philipp and Goodall, Jemima A. and Gruner, Victoria and Harvey, Andrew and Hayes, Rebekah and Heer, Leonard and Herrera Miranda, Roberto E. and H{\"u}bler, Nataliia and Huntington-Rainey, Biu and Ivani, Jessica K. and Johns, Marilen and Just, Erika and Kashima, Eri and Kipf, Carolina and Klingenberg, Janina V. and K{\"o}nig, Nikita and Koti, Aikaterina and Kowalik, Richard G. A. and Krasnoukhova, Olga and Lindvall, Nora L.M. and Lorenzen, Mandy and Lutzenberger, Hannah and Martins, T{\^o}nia R.A. and Mata German, Celia and van der  Meer, Suzanne and Montoya Samam{\'e}, Jaime and M{\"u}ller, Michael and Muradoglu, Saliha and Neely, Kelsey and Nickel, Johanna and Norvik, Miina and Oluoch, Cheryl Akinyi and Peacock, Jesse and Pearey, India O.C. and Peck, Naomi and Petit, Stephanie and Pieper, S{\"o}ren and Poblete, Mariana and Prestipino, Daniel and Raabe, Linda and Raja, Amna and Reimringer, Janis and Rey, Sydney C. and Rizaew, Julia and Ruppert, Eloisa and Salmon, Kim K. and Sammet, Jill and Schembri, Rhiannon and Schlabbach, Lars and Schmidt, Frederick W.P. and Skilton, Amalia and Smith, Wikaliler Daniel and de  Sousa, Hil{\'a}rio and Sverredal, Kristin and Valle, Daniel and Vera, Javier and Vo{\ss}, Judith and Witte, Tim and Wu, Henry and Yam, Stephanie and Ye 葉婧婷, Jingting and Yong, Maisie and Yuditha, Tessa and Zariquiey, Roberto and Forkel, Robert and Evans, Nicholas and Levinson, Stephen C. and Haspelmath, Martin and Greenhill, Simon J. and Atkinson, Quentin D. and Gray, Russell D.},
   year = {2023},
   volume={9},
@@ -3349,6 +3400,17 @@ DOI={https://doi.org/10.5281/zenodo.7740822}
   year={1809}
 }
 
+
+
+@article{greenhill2018population,
+  title={Population size and the rate of language evolution: a test across Indo-European, Austronesian, and Bantu languages},
+  author={Greenhill, Simon J and Hua, Xia and Welsh, Caela F and Schneemann, Hilde and Bromham, Lindell},
+  journal={Frontiers in psychology},
+  volume={9},
+  pages={315297},
+  year={2018},
+  publisher={Frontiers}
+}
 
 @article{greenhilletal_2017,
   title = {The {{Evolutionary Dynamics}} of {{Language Systems}}},
@@ -3575,6 +3637,7 @@ DOI={https://doi.org/10.5281/zenodo.7740822}
   booktitle = {Arts of {{Vanuatu}}},
   author = {Huffman, Kirk},
   year = {1996},
+editor={Joël Bonnemaison AND   Christian Kaufmann AND Kirk Huffman AND Darrell Tryon},
   pages = {182--194},
   publisher = {{University of Hawaii Press}}
 }
@@ -5308,6 +5371,17 @@ note={Published 21 January 2016,  Retrieved 30 July 2016}
   organization = {{R Foundation for Statistical Computing}}
 }
 
+@article{milroy1992social,
+  title={Social network and social class: Toward an integrated sociolinguistic model1},
+  author={Milroy, Lesley and Milroy, James},
+  journal={Language in society},
+  volume={21},
+  number={1},
+  pages={1--26},
+  year={1992},
+  publisher={Cambridge University Press}
+}
+
 @article{raviv2019compositional,
   title = {Compositional {{Structure Can Emerge}} without {{Generational Transmission}}},
   author = {Raviv, Limor and Meyer, Antje and {Lev-Ari}, Shiri},
@@ -5375,9 +5449,10 @@ note={Published 21 January 2016,  Retrieved 30 July 2016}
 @incollection{rensch1992calculating,
   title = {Calculating {{Lexical Similarity}}},
   booktitle = {Windows on Bilingualism},
-  author = {Rensch, Calvin R and Casad, Eugene H.},
+  author = {Rensch, Calvin R},
   year = {1992},
   pages = {13--15},
+  url={https://www.sil.org/resources/archives/8945},
   publisher = {{Summer Institute of Linguistics}}
 }
 
@@ -5480,6 +5555,15 @@ note={Published 21 January 2016,  Retrieved 30 July 2016}
   publisher = {{Public Library of Science}},
   journal = {PloS one},
   number = {8}
+}
+
+@inproceedings{mann2022cognition,
+  title={Cognition and the stability of evolving complex morphology: an agent-based model},
+  author={Mann, Stephen and Beniamine, Sacha and Lindsay-Smith, Emily and Esher, Louise and Spike, Matt and Round, Erich Ross},
+  booktitle={The Evolution of Language: Proceedings of the Joint Conference on Language Evolution (JCoLE)},
+  pages={635--642},
+  year={2022},
+  organization={Joint Conference on Language Evolution (JCoLE)}
 }
 
 @article{liu2022ancient,
@@ -6077,6 +6161,8 @@ eprint = {
 @incollection{tryon1996dialect,
   title = {Dialect Chaining and the Use of Geographical Space},
   booktitle = {Arts of {{Vanuatu}}},
+editor={Joël Bonnemaison, Christian Kaufmann, Kirk Huffman, Darrell Tryon},
+
   author = {Tryon, Darrell},
   year = {1996},
   pages = {170--181},
