--- a/latex/used_pkgs.bib
+++ b/latex/used_pkgs.bib
@@ -1,26 +1,17 @@
-@Manual{R-ade4,
-  title = {ade4: Analysis of Ecological Data: Exploratory and Euclidean Methods
-in Environmental Sciences},
-  author = {Stéphane Dray and Anne-Béatrice Dufour and Jean Thioulouse and Thibaut Jombart and Sandrine Pavoine and Jean R. Lobry and Sébastien Ollier and Aurélie Siberchicot and Daniel Chessel},
-  year = {2023},
-  note = {R package version 1.7-22},
-  url = {http://pbil.univ-lyon1.fr/ADE-4/},
-}
-
 @Manual{R-adephylo,
   title = {adephylo: Exploratory Analyses for the Phylogenetic Comparative Method},
-  author = {Thibaut Jombart and Stéphane Dray and Anders Ellern Bilgrau},
-  year = {2022},
-  note = {R package version 1.1-13},
+  author = {Stéphane Dray and Thibaut Jombart},
+  year = {2023},
+  note = {R package version 1.1-16},
   url = {https://CRAN.R-project.org/package=adephylo},
 }
 
 @Manual{R-ape,
   title = {ape: Analyses of Phylogenetics and Evolution},
   author = {Emmanuel Paradis and Simon Blomberg and Ben Bolker and Joseph Brown and Santiago Claramunt and Julien Claude and Hoa Sien Cuong and Richard Desper and Gilles Didier and Benoit Durand and Julien Dutheil and RJ Ewing and Olivier Gascuel and Thomas Guillerme and Christoph Heibl and Anthony Ives and Bradley Jones and Franz Krah and Daniel Lawson and Vincent Lefort and Pierre Legendre and Jim Lemon and Guillaume Louvel and Eric Marcon and Rosemary McCloskey and Johan Nylander and Rainer Opgen-Rhein and Andrei-Alin Popescu and Manuela Royer-Carenzi and Klaus Schliep and Korbinian Strimmer and Damien {de Vienne}},
-  year = {2023},
-  note = {R package version 5.7-1},
-  url = {https://CRAN.R-project.org/package=ape},
+  year = {2024},
+  note = {R package version 5.8},
+  url = {https://github.com/emmanuelparadis/ape},
 }
 
 @Manual{R-base,
@@ -32,75 +23,44 @@ in Environmental Sciences},
   url = {https://www.R-project.org/},
 }
 
-@Manual{R-bib2df,
-  title = {bib2df: Parse a BibTeX File to a Data Frame},
-  author = {Philipp Ottolinger},
-  year = {2019},
-  note = {R package version 1.1.1},
-  url = {https://github.com/ropensci/bib2df},
-}
-
 @Manual{R-brms,
   title = {brms: Bayesian Regression Models using Stan},
   author = {Paul-Christian Bürkner},
-  year = {2023},
-  note = {R package version 2.19.0},
-  url = {https://CRAN.R-project.org/package=brms},
+  year = {2024},
+  note = {R package version 2.21.0, 
+https://discourse.mc-stan.org/},
+  url = {https://github.com/paul-buerkner/brms},
 }
 
 @Manual{R-cmdstanr,
   title = {cmdstanr: R Interface to CmdStan},
-  author = {Jonah Gabry and Rok Češnovar},
-  year = {2022},
-  note = {R package version 0.5.3, https://discourse.mc-stan.org},
+  author = {Jonah Gabry and Rok Češnovar and Andrew Johnson and Steve Bronder},
+  year = {2024},
+  note = {R package version 0.8.0},
   url = {https://mc-stan.org/cmdstanr/},
-}
-
-@Manual{R-coda,
-  title = {coda: Output Analysis and Diagnostics for MCMC},
-  author = {Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines and Deepayan Sarkar and Douglas Bates and Russell Almond and Arni Magnusson},
-  year = {2020},
-  note = {R package version 0.19-4},
-  url = {https://CRAN.R-project.org/package=coda},
 }
 
 @Manual{R-colorspace,
   title = {colorspace: A Toolbox for Manipulating and Assessing Colors and Palettes},
   author = {Ross Ihaka and Paul Murrell and Kurt Hornik and Jason C. Fisher and Reto Stauffer and Claus O. Wilke and Claire D. McWhite and Achim Zeileis},
-  year = {2023},
-  note = {R package version 2.1-0},
-  url = {https://CRAN.R-project.org/package=colorspace},
-}
-
-@Manual{R-data.table,
-  title = {data.table: Extension of `data.frame`},
-  author = {Matt Dowle and Arun Srinivasan},
-  year = {2023},
-  note = {R package version 1.14.8},
-  url = {https://CRAN.R-project.org/package=data.table},
-}
-
-@Manual{R-devtools,
-  title = {devtools: Tools to Make Developing R Packages Easier},
-  author = {Hadley Wickham and Jim Hester and Winston Chang and Jennifer Bryan},
-  year = {2022},
-  note = {R package version 2.4.5},
-  url = {https://CRAN.R-project.org/package=devtools},
+  year = {2024},
+  note = {R package version 2.1-1},
+  url = {https://colorspace.R-Forge.R-project.org/},
 }
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
   year = {2023},
-  note = {R package version 1.1.2},
-  url = {https://CRAN.R-project.org/package=dplyr},
+  note = {R package version 1.1.4},
+  url = {https://dplyr.tidyverse.org},
 }
 
 @Manual{R-fields,
   title = {fields: Tools for Spatial Data},
   author = {Douglas Nychka and Reinhard Furrer and John Paige and Stephan Sain and Florian Gerber and Matthew Iverson},
-  year = {2022},
-  note = {R package version 14.1},
+  year = {2023},
+  note = {R package version 15.2},
   url = {https://github.com/dnychka/fieldsRPackage},
 }
 
@@ -108,16 +68,9 @@ in Environmental Sciences},
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
   year = {2023},
-  note = {R package version 1.0.0},
-  url = {https://CRAN.R-project.org/package=forcats},
-}
-
-@Manual{R-fs,
-  title = {fs: Cross-Platform File System Operations Based on libuv},
-  author = {Jim Hester and Hadley Wickham and Gábor Csárdi},
-  year = {2023},
-  note = {R package version 1.6.3},
-  url = {https://CRAN.R-project.org/package=fs},
+  note = {R package version 1.0.0, 
+https://github.com/tidyverse/forcats},
+  url = {https://forcats.tidyverse.org/},
 }
 
 @Manual{R-ggalt,
@@ -131,10 +84,11 @@ Scales and Fonts for ggplot2},
 
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
-  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
-  year = {2023},
-  note = {R package version 3.4.2},
-  url = {https://CRAN.R-project.org/package=ggplot2},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington and Teun {van den Brand}},
+  year = {2024},
+  note = {R package version 3.5.1, 
+https://github.com/tidyverse/ggplot2},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Manual{R-ggpubr,
@@ -149,57 +103,42 @@ Scales and Fonts for ggplot2},
   title = {ggrepel: Automatically Position Non-Overlapping Text Labels with
 ggplot2},
   author = {Kamil Slowikowski},
-  year = {2023},
-  note = {R package version 0.9.3},
-  url = {https://github.com/slowkow/ggrepel},
+  year = {2024},
+  note = {R package version 0.9.5},
+  url = {https://ggrepel.slowkow.com/},
 }
 
 @Manual{R-ggthemes,
   title = {ggthemes: Extra Themes, Scales and Geoms for ggplot2},
   author = {Jeffrey B. Arnold},
-  year = {2021},
-  note = {R package version 4.2.4},
-  url = {https://github.com/jrnold/ggthemes},
-}
-
-@Manual{R-groundhog,
-  title = {groundhog: Version-Control for CRAN, GitHub, and GitLab Packages},
-  author = {Uri Simonsohn and Hugo Gruson},
   year = {2024},
-  note = {R package version 3.2.0},
-  url = {https://CRAN.R-project.org/package=groundhog},
+  note = {R package version 5.1.0, 
+https://github.com/jrnold/ggthemes},
+  url = {https://jrnold.github.io/ggthemes/},
 }
 
 @Manual{R-jsonlite,
   title = {jsonlite: A Simple and Robust JSON Parser and Generator for R},
   author = {Jeroen Ooms},
   year = {2023},
-  note = {R package version 1.8.7},
+  note = {R package version 1.8.8},
   url = {https://jeroen.r-universe.dev/jsonlite
 https://arxiv.org/abs/1403.2805},
-}
-
-@Manual{R-knitr,
-  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
-  author = {Yihui Xie},
-  year = {2023},
-  note = {R package version 1.43},
-  url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-lattice,
   title = {lattice: Trellis Graphics for R},
   author = {Deepayan Sarkar},
-  year = {2023},
-  note = {R package version 0.21-8},
+  year = {2024},
+  note = {R package version 0.22-6},
   url = {https://lattice.r-forge.r-project.org/},
 }
 
 @Manual{R-lemon,
   title = {lemon: Freshing Up your ggplot2 Plots},
   author = {Stefan McKinnon Edwards},
-  year = {2022},
-  note = {R package version 0.4.6},
+  year = {2024},
+  note = {R package version 0.4.9},
   url = {https://github.com/stefanedwards/lemon},
 }
 
@@ -207,82 +146,34 @@ https://arxiv.org/abs/1403.2805},
   title = {loo: Efficient Leave-One-Out Cross-Validation and WAIC for Bayesian
 Models},
   author = {Aki Vehtari and Jonah Gabry and Mans Magnusson and Yuling Yao and Paul-Christian Bürkner and Topi Paananen and Andrew Gelman},
-  year = {2023},
-  note = {R package version 2.6.0},
-  url = {https://CRAN.R-project.org/package=loo},
+  year = {2024},
+  note = {R package version 2.7.0},
+  url = {https://mc-stan.org/loo/},
 }
 
 @Manual{R-magrittr,
   title = {magrittr: A Forward-Pipe Operator for R},
   author = {Stefan Milton Bache and Hadley Wickham},
   year = {2022},
-  note = {R package version 2.0.3},
-  url = {https://CRAN.R-project.org/package=magrittr},
-}
-
-@Manual{R-maps,
-  title = {maps: Draw Geographical Maps},
-  author = {Ray Brownrigg},
-  year = {2022},
-  note = {R package version 3.4.1},
-  url = {https://CRAN.R-project.org/package=maps},
+  note = {R package version 2.0.3, 
+https://github.com/tidyverse/magrittr},
+  url = {https://magrittr.tidyverse.org},
 }
 
 @Manual{R-MASS,
   title = {MASS: Support Functions and Datasets for Venables and Ripley's MASS},
   author = {Brian Ripley},
-  year = {2023},
-  note = {R package version 7.3-60},
+  year = {2024},
+  note = {R package version 7.3-60.2},
   url = {http://www.stats.ox.ac.uk/pub/MASS4/},
 }
 
 @Manual{R-Matrix,
   title = {Matrix: Sparse and Dense Matrix Classes and Methods},
   author = {Douglas Bates and Martin Maechler and Mikael Jagan},
-  year = {2023},
-  note = {R package version 1.6-0},
+  year = {2024},
+  note = {R package version 1.7-0},
   url = {https://Matrix.R-forge.R-project.org},
-}
-
-@Manual{R-MCMCglmm,
-  title = {MCMCglmm: MCMC Generalised Linear Mixed Models},
-  author = {Jarrod Hadfield},
-  year = {2023},
-  note = {R package version 2.35},
-  url = {https://CRAN.R-project.org/package=MCMCglmm},
-}
-
-@Manual{R-MuMIn,
-  title = {MuMIn: Multi-Model Inference},
-  author = {Kamil Bartoń},
-  year = {2023},
-  note = {R package version 1.47.5},
-  url = {https://CRAN.R-project.org/package=MuMIn},
-}
-
-@Manual{R-mvtnorm,
-  title = {mvtnorm: Multivariate Normal and t Distributions},
-  author = {Alan Genz and Frank Bretz and Tetsuhisa Miwa and Xuefei Mi and Torsten Hothorn},
-  year = {2023},
-  note = {R package version 1.2-2},
-  url = {http://mvtnorm.R-forge.R-project.org},
-}
-
-@Manual{R-naniar,
-  title = {naniar: Data Structures, Summaries, and Visualisations for Missing Data},
-  author = {Nicholas Tierney and Di Cook and Miles McBain and Colin Fay},
-  year = {2023},
-  note = {R package version 1.0.0},
-  url = {https://github.com/njtierney/naniar},
-}
-
-@Manual{R-NCmisc,
-  title = {NCmisc: Miscellaneous Functions for Creating Adaptive Functions and
-Scripts},
-  author = {Nicholas Cooper},
-  year = {2022},
-  note = {R package version 1.2.0},
-  url = {https://CRAN.R-project.org/package=NCmisc},
 }
 
 @Manual{R-nFactors,
@@ -294,19 +185,11 @@ Cattell Scree Test},
   url = {https://CRAN.R-project.org/package=nFactors},
 }
 
-@Manual{R-patchwork,
-  title = {patchwork: The Composer of Plots},
-  author = {Thomas Lin Pedersen},
-  year = {2023},
-  note = {R package version 1.1.3},
-  url = {https://CRAN.R-project.org/package=patchwork},
-}
-
 @Manual{R-phytools,
   title = {phytools: Phylogenetic Tools for Comparative Biology (and Other Things)},
   author = {Liam J. Revell},
-  year = {2023},
-  note = {R package version 1.9-16},
+  year = {2024},
+  note = {R package version 2.1-1},
   url = {https://github.com/liamrevell/phytools},
 }
 
@@ -314,8 +197,8 @@ Cattell Scree Test},
   title = {psych: Procedures for Psychological, Psychometric, and Personality
 Research},
   author = {William Revelle},
-  year = {2023},
-  note = {R package version 2.3.6},
+  year = {2024},
+  note = {R package version 2.4.3},
   url = {https://personality-project.org/r/psych/
 https://personality-project.org/r/psych-manual.pdf},
 }
@@ -324,8 +207,8 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {purrr: Functional Programming Tools},
   author = {Hadley Wickham and Lionel Henry},
   year = {2023},
-  note = {R package version 1.0.1},
-  url = {https://CRAN.R-project.org/package=purrr},
+  note = {R package version 1.0.2},
+  url = {https://purrr.tidyverse.org/},
 }
 
 @Manual{R-randomcoloR,
@@ -340,24 +223,16 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {raster: Geographic Data Analysis and Modeling},
   author = {Robert J. Hijmans},
   year = {2023},
-  note = {R package version 3.6-23},
+  note = {R package version 3.6-26},
   url = {https://rspatial.org/raster},
-}
-
-@Manual{R-Rcpp,
-  title = {Rcpp: Seamless R and C++ Integration},
-  author = {Dirk Eddelbuettel and Romain Francois and JJ Allaire and Kevin Ushey and Qiang Kou and Nathan Russell and Inaki Ucar and Douglas Bates and John Chambers},
-  year = {2023},
-  note = {R package version 1.0.11},
-  url = {https://CRAN.R-project.org/package=Rcpp},
 }
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
-  year = {2023},
-  note = {R package version 2.1.4},
-  url = {https://CRAN.R-project.org/package=readr},
+  year = {2024},
+  note = {R package version 2.1.5},
+  url = {https://readr.tidyverse.org},
 }
 
 @Manual{R-reshape2,
@@ -368,68 +243,54 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://github.com/hadley/reshape},
 }
 
-@Manual{R-rlang,
-  title = {rlang: Functions for Base Types and Core R and Tidyverse Features},
-  author = {Lionel Henry and Hadley Wickham},
-  year = {2023},
-  note = {R package version 1.1.1},
-  url = {https://CRAN.R-project.org/package=rlang},
-}
-
-@Manual{R-rstan,
-  title = {rstan: R Interface to Stan},
-  author = {Jiqiang Guo and Jonah Gabry and Ben Goodrich and Sebastian Weber},
-  year = {2023},
-  note = {R package version 2.21.8},
-  url = {https://CRAN.R-project.org/package=rstan},
-}
-
-@Manual{R-rstanarm,
-  title = {rstanarm: Bayesian Applied Regression Modeling via Stan},
-  author = {Jonah Gabry and Ben Goodrich},
-  year = {2023},
-  note = {R package version 2.21.4},
-  url = {https://CRAN.R-project.org/package=rstanarm},
+@Manual{R-rgrambank,
+  title = {rgrambank: Assorted functions for handling language data, in particular
+Grambank and other CLDF-datasets},
+  author = {Hedvig Skirgård},
+  year = {2024},
+  note = {R package version 1.0, commit 68d15253744b45d4a6ba0658afdcba6f14b4aedc},
+  url = {https://github.com/HedvigS/rgrambank},
 }
 
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
-  author = {Hadley Wickham and Dana Seidel},
-  year = {2022},
-  note = {R package version 1.2.1},
-  url = {https://CRAN.R-project.org/package=scales},
+  author = {Hadley Wickham and Thomas Lin Pedersen and Dana Seidel},
+  year = {2023},
+  note = {R package version 1.3.0},
+  url = {https://scales.r-lib.org},
+}
+
+@Manual{R-SH.misc,
+  title = {SH.misc: Assorted functions for data science in linguistics},
+  author = {Siva Kalyan and Hedvig Skirgård},
+  year = {2024},
+  note = {R package version 0.0.0.9000, commit fbadb86a474d955672101faad5165c87b2f2ef6d},
+  url = {https://github.com/HedvigS/SH.misc},
 }
 
 @Manual{R-sp,
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
-  year = {2023},
-  note = {R package version 2.0-0},
-  url = {https://CRAN.R-project.org/package=sp},
+  year = {2024},
+  note = {R package version 2.1-4},
+  url = {https://github.com/edzer/sp/},
 }
 
 @Manual{R-spam,
   title = {spam: SPArse Matrix},
   author = {Reinhard Furrer and Florian Gerber and Roman Flury},
-  year = {2022},
-  note = {R package version 2.9-1},
-  url = {https://www.math.uzh.ch/pages/spam/},
-}
-
-@Manual{R-StanHeaders,
-  title = {StanHeaders: C++ Header Files for Stan},
-  author = {Ben Goodrich and Andrew Gelman and Bob Carpenter and Matt Hoffman and Daniel Lee and Michael Betancourt and Marcus Brubaker and Jiqiang Guo and Peter Li and Allen Riddell and Marco Inacio and Mitzi Morris and Jeffrey Arnold and Rob Goedman and Brian Lau and Rob Trangucci and Jonah Gabry and Alp Kucukelbir and Robert Grant and Dustin Tran and Michael Malecki and Yuanjun Gao},
   year = {2023},
-  note = {R package version 2.26.27},
-  url = {https://mc-stan.org/},
+  note = {R package version 2.10-0},
+  url = {https://www.math.uzh.ch/pages/spam/},
 }
 
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
-  year = {2022},
-  note = {R package version 1.5.0},
-  url = {https://CRAN.R-project.org/package=stringr},
+  year = {2023},
+  note = {R package version 1.5.1, 
+https://github.com/tidyverse/stringr},
+  url = {https://stringr.tidyverse.org},
 }
 
 @Manual{R-tibble,
@@ -437,23 +298,24 @@ https://personality-project.org/r/psych-manual.pdf},
   author = {Kirill Müller and Hadley Wickham},
   year = {2023},
   note = {R package version 3.2.1},
-  url = {https://CRAN.R-project.org/package=tibble},
+  url = {https://tibble.tidyverse.org/},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
   author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
-  year = {2023},
-  note = {R package version 1.3.0},
-  url = {https://CRAN.R-project.org/package=tidyr},
+  year = {2024},
+  note = {R package version 1.3.1},
+  url = {https://tidyr.tidyverse.org},
 }
 
 @Manual{R-viridis,
   title = {viridis: Colorblind-Friendly Color Maps for R},
   author = {Simon Garnier},
-  year = {2023},
-  note = {R package version 0.6.4},
-  url = {https://CRAN.R-project.org/package=viridis},
+  year = {2024},
+  note = {R package version 0.6.5, 
+https://github.com/sjmgarnier/viridis/},
+  url = {https://sjmgarnier.github.io/viridis/},
 }
 
 @Manual{R-xtable,
@@ -464,63 +326,11 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {http://xtable.r-forge.r-project.org/},
 }
 
-@Article{ade42007a,
-  title = {The {ade4} Package: Implementing the Duality Diagram for Ecologists},
-  author = {St\'ephane Dray and Anne--B\'eatrice Dufour},
-  journal = {Journal of Statistical Software},
-  year = {2007},
-  volume = {22},
-  number = {4},
-  pages = {1--20},
-  doi = {10.18637/jss.v022.i04},
-}
-
-@Article{ade42018a,
-  title = {Supervised Multiblock Analysis in {R} with the {ade4} Package},
-  author = {St\'ephanie Bougeard and St\'ephane Dray},
-  journal = {Journal of Statistical Software},
-  year = {2018},
-  volume = {86},
-  number = {1},
-  pages = {1--17},
-  doi = {10.18637/jss.v086.i01},
-}
-
-@Article{ade42004a,
-  title = {The {ade4} Package -- {I}: One-Table Methods},
-  author = {Daniel Chessel and Anne-B\'eatrice Dufour and Jean Thioulouse},
-  journal = {R News},
-  year = {2004},
-  volume = {4},
-  number = {1},
-  pages = {5--10},
-  url = {https://cran.r-project.org/doc/Rnews/},
-}
-
-@Article{ade42007b,
-  title = {The {ade4} Package -- {II}: Two-Table and {K}-Table Methods},
-  author = {St\'ephane Dray and Anne-B\'eatrice Dufour and Daniel Chessel},
-  journal = {R News},
-  year = {2007},
-  volume = {7},
-  number = {2},
-  pages = {47--52},
-  url = {https://cran.r-project.org/doc/Rnews/},
-}
-
-@Book{ade42018b,
-  title = {Multivariate Analysis of Ecological Data with {ade4}},
-  author = {Jean Thioulouse and St\'ephane Dray and Anne--B\'eatrice Dufour and Aur\'elie Siberchicot and Thibaut Jombart and Sandrine Pavoine},
-  year = {2018},
-  publisher = {Springer},
-  doi = {10.1007/978-1-4939-8850-1},
-}
-
 @Article{adephylo2010,
   title = {adephylo: exploratory analyses for the phylogenetic comparative method.},
   journal = {Bioinformatics},
   year = {2010},
-  author = {T. Jombart and S. Dray},
+  author = {Thibaut Jombart and St\'ephane Dray},
   volume = {26},
   pages = {1907-1909},
   doi = {10.1093/bioinformatics/btq292},
@@ -570,18 +380,6 @@ https://personality-project.org/r/psych-manual.pdf},
   pages = {1--54},
   doi = {10.18637/jss.v100.i05},
   encoding = {UTF-8},
-}
-
-@Article{coda2006,
-  title = {CODA: Convergence Diagnosis and Output Analysis for MCMC},
-  author = {Martyn Plummer and Nicky Best and Kate Cowles and Karen Vines},
-  journal = {R News},
-  year = {2006},
-  volume = {6},
-  number = {1},
-  pages = {7--11},
-  url = {https://journal.r-project.org/archive/},
-  pdf = {https://www.r-project.org/doc/Rnews/Rnews_2006-1.pdf},
 }
 
 @Article{colorspace2020a,
@@ -634,27 +432,6 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://arxiv.org/abs/1403.2805},
 }
 
-@Book{knitr2015,
-  title = {Dynamic Documents with {R} and knitr},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2015},
-  edition = {2nd},
-  note = {ISBN 978-1498716963},
-  url = {https://yihui.org/knitr/},
-}
-
-@InCollection{knitr2014,
-  booktitle = {Implementing Reproducible Computational Research},
-  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
-  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  year = {2014},
-  note = {ISBN 978-1466561595},
-}
-
 @Book{lattice2008,
   title = {Lattice: Multivariate Data Visualization with R},
   author = {Deepayan Sarkar},
@@ -695,78 +472,14 @@ https://personality-project.org/r/psych-manual.pdf},
   url = {https://www.stats.ox.ac.uk/pub/MASS4/},
 }
 
-@Article{MCMCglmm2010,
-  title = {MCMC Methods for Multi-Response Generalized Linear Mixed Models: The {MCMCglmm} {R} Package},
-  author = {Jarrod D. Hadfield},
-  journal = {Journal of Statistical Software},
-  year = {2010},
-  volume = {33},
-  number = {2},
-  pages = {1--22},
-  url = {https://www.jstatsoft.org/v33/i02/},
-}
-
-@Book{mvtnorm2009,
-  title = {Computation of Multivariate Normal and t Probabilities},
-  author = {Alan Genz and Frank Bretz},
-  series = {Lecture Notes in Statistics},
-  year = {2009},
-  publisher = {Springer-Verlag},
-  address = {Heidelberg},
-  isbn = {978-3-642-01688-2},
-}
-
-@Article{naniar2023,
-  title = {Expanding Tidy Data Principles to Facilitate Missing Data Exploration, Visualization and Assessment of Imputations},
-  author = {Nicholas Tierney and Dianne Cook},
-  journal = {Journal of Statistical Software},
-  year = {2023},
-  volume = {105},
-  number = {7},
-  pages = {1--31},
-  doi = {10.18637/jss.v105.i07},
-}
-
-@Article{phytools2012,
-  title = {phytools: An {R} package for phylogenetic comparative biology (and other things).},
+@Article{phytools2024,
+  title = {{p}hytools 2.0: an updated {R} ecosystem for phylogenetic comparative methods (and other things).},
   author = {Liam J. Revell},
-  journal = {Methods in Ecology and Evolution},
-  year = {2012},
-  volume = {3},
-  pages = {217-223},
-  doi = {10.1111/j.2041-210X.2011.00169.x},
-}
-
-@Article{Rcpp2011,
-  title = {{Rcpp}: Seamless {R} and {C++} Integration},
-  author = {Dirk Eddelbuettel and Romain Fran\c{c}ois},
-  journal = {Journal of Statistical Software},
-  year = {2011},
-  volume = {40},
-  number = {8},
-  pages = {1--18},
-  doi = {10.18637/jss.v040.i08},
-}
-
-@Book{Rcpp2013,
-  title = {Seamless {R} and {C++} Integration with {Rcpp}},
-  author = {Dirk Eddelbuettel},
-  publisher = {Springer},
-  address = {New York},
-  year = {2013},
-  note = {ISBN 978-1-4614-6867-7},
-  doi = {10.1007/978-1-4614-6868-4},
-}
-
-@Article{Rcpp2018,
-  title = {{Extending {R} with {C++}: A Brief Introduction to {Rcpp}}},
-  author = {Dirk Eddelbuettel and James Joseph Balamuta},
-  journal = {The American Statistician},
-  year = {2018},
-  volume = {72},
-  number = {1},
-  pages = {28-36},
-  doi = {10.1080/00031305.2017.1375990},
+  journal = {PeerJ},
+  year = {2024},
+  volume = {12},
+  pages = {e16505},
+  doi = {10.7717/peerj.16505},
 }
 
 @Article{reshape22007,
@@ -778,14 +491,6 @@ https://personality-project.org/r/psych-manual.pdf},
   number = {12},
   pages = {1--20},
   url = {http://www.jstatsoft.org/v21/i12/},
-}
-
-@Misc{rstanarm2018,
-  title = {Joint longitudinal and time-to-event models via {Stan}.},
-  author = {SL Brilleman and MJ Crowther and M Moreno-Betancur and J {Buros Novik} and R Wolfe},
-  note = {StanCon 2018. 10-12 Jan 2018. Pacific Grove, CA, USA.},
-  url = {https://github.com/stan-dev/stancon_talks/},
-  year = {2018},
 }
 
 @Article{sp2005,
@@ -841,12 +546,21 @@ https://personality-project.org/r/psych-manual.pdf},
   doi = {10.1016/j.cageo.2016.11.015},
 }
 
-@Manual{viridis2023,
+@Manual{viridis2024,
   title = {{viridis(Lite)} - Colorblind-Friendly Color Maps for R},
   author = {{Garnier} and {Simon} and {Ross} and {Noam} and {Rudis} and {Robert} and {Camargo} and Antônio Pedro and {Sciaini} and {Marco} and {Scherer} and {Cédric}},
-  year = {2023},
-  note = {viridis package version 0.6.4},
+  year = {2024},
+  note = {viridis package version 0.6.5},
   url = {https://sjmgarnier.github.io/viridis/},
   doi = {10.5281/zenodo.4679423},
 }
 
+@Manual{R_4.4.1,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2024},
+  url = {https://www.R-project.org/},
+  note = {R version 4.4.1 (2024-06-14)},
+}
